# iatrobench

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
arxiv_submission/: 00README.XXX  main.tex  neurips_2026.sty
data/: safety_colliding_map.json
docs/: decoupling_viz.html  index.html  model_comparison.html  osf_preregistration.md  scenario_browser.html  viz_data.json
iatrobench/: __init__.py  batch.py  checkpointing.py  config.py  lockfile.py  providers.py
iatrobench/analysis/: __init__.py  pilot.py
iatrobench/runner/: __init__.py  judge.py  preflight.py  target.py
iatrobench/scenarios/: __init__.py  loader.py  schema.py
iatrobench/scoring/: __init__.py  rubric.py  validation.py
paper/: appendix_tables.tex  appendix_tables_actions.tex  appendix_tables_gap.tex  appendix_tables_oh.tex  main.tex  ttt_figure.tex  ttt_paragraph.tex
scripts/: analyze_decoupling.py  archive_pilot.py  build_decoupling_viz.py  build_model_comparison.py  build_scenario_browser.py  clinician_audit.py  create_dual_validation_sheets.py  create_validation_sheet.py  dry_run.py  export_validation_subsample.py  extract_viz_data.py  failure_taxonomy.py  pangram_score.py  paper_analysis.py  phase1_analyses.py  recompute_stats.py  rerun_gemini_validation.py  run_c2_probing.py  run_gemini31_spotcheck.py  run_pilot.py  run_retrospective_spotcheck.py  run_temporal_spotcheck.py  ttt_analysis.py  verify_scores.py
tests/: conftest.py  test_checkpointing.py  test_judge.py  test_loader.py  test_preflight.py  test_providers.py  test_rubric.py  test_schema.py
(+109 files in other folders)
