[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iatrobench"
version = "0.1.0"
description = "Measuring iatrogenic harm from AI safety measures in medical advice"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "David Gringras", email = "davidgringras@hsph.harvard.edu"}]
dependencies = [
    "litellm>=1.50.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.20.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
include = ["iatrobench*"]
